// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentTypeMultipleField component should have a proper style generator 1`] = `
Object {
  "selectedMenuItem": Object {
    "backgroundColor": "test2 !important",
    "color": "test3",
  },
  "title": Object {
    "0": "t",
    "1": "e",
    "2": "s",
    "3": "t",
    "4": "1",
  },
}
`;

exports[`DocumentTypeMultipleField component should have a proper style generator 2`] = `
Object {
  "selectedMenuItem": Object {
    "backgroundColor": " !important",
    "color": "",
  },
  "title": Object {
    "0": "t",
    "1": "e",
    "2": "s",
    "3": "t",
    "4": "1",
  },
}
`;

exports[`DocumentTypeMultipleField component should have a proper style generator 3`] = `
Object {
  "selectedMenuItem": Object {
    "backgroundColor": " !important",
    "color": "",
  },
  "title": Object {
    "0": "t",
    "1": "e",
    "2": "s",
    "3": "t",
    "4": "1",
  },
}
`;

exports[`DocumentTypeMultipleField component should render default view 1`] = `
<WithStyles(FormControl)
  fullWidth={true}
>
  <WithStyles(WithFormControlContext(InputLabel))>
    Work type
  </WithStyles(WithFormControlContext(InputLabel))>
  <WithStyles(WithFormControlContext(Select))
    aria-label="Select multiple publications types to search on"
    disabled={false}
    fullWidth={true}
    multiple={true}
    onChange={[Function]}
    value={Array []}
  >
    <WithStyles(MenuItem)
      disabled={true}
      key="0"
    >
      Select document types
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="1"
      style={
        Object {
          "display": "block",
        }
      }
      value={130}
    >
      Conference Paper
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="2"
      style={
        Object {
          "display": "block",
        }
      }
      value={174}
    >
      Book
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="3"
      style={
        Object {
          "display": "block",
        }
      }
      value={177}
    >
      Book Chapter
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="4"
      style={
        Object {
          "display": "block",
        }
      }
      value={179}
    >
      Journal Article
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="5"
      style={
        Object {
          "display": "block",
        }
      }
      value={181}
    >
      Department Technical Report
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="6"
      style={
        Object {
          "display": "block",
        }
      }
      value={183}
    >
      Working Paper
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="7"
      style={
        Object {
          "display": "block",
        }
      }
      value={185}
    >
      Patent
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="8"
      style={
        Object {
          "display": "block",
        }
      }
      value={187}
    >
      Thesis
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="9"
      style={
        Object {
          "display": "block",
        }
      }
      value={189}
    >
      Seminar Paper
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="10"
      style={
        Object {
          "display": "block",
        }
      }
      value={191}
    >
      Newspaper Article
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="11"
      style={
        Object {
          "display": "block",
        }
      }
      value={197}
    >
      Conference Proceedings
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="12"
      style={
        Object {
          "display": "block",
        }
      }
      value={202}
    >
      Generic Document
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="13"
      style={
        Object {
          "display": "block",
        }
      }
      value={204}
    >
      Preprint
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="14"
      style={
        Object {
          "display": "block",
        }
      }
      value={228}
    >
      Digilib Image
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="15"
      style={
        Object {
          "display": "block",
        }
      }
      value={238}
    >
      Image
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="16"
      style={
        Object {
          "display": "block",
        }
      }
      value={263}
    >
      Audio Document
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="17"
      style={
        Object {
          "display": "block",
        }
      }
      value={272}
    >
      Reference Entry
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="18"
      style={
        Object {
          "display": "block",
        }
      }
      value={275}
    >
      Research Report
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="19"
      style={
        Object {
          "display": "block",
        }
      }
      value={294}
    >
      Journal
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="20"
      style={
        Object {
          "display": "block",
        }
      }
      value={310}
    >
      Video Document
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="21"
      style={
        Object {
          "display": "block",
        }
      }
      value={313}
    >
      Creative Work
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="22"
      style={
        Object {
          "display": "block",
        }
      }
      value={316}
    >
      Design
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="23"
      style={
        Object {
          "display": "block",
        }
      }
      value={371}
    >
      Data Collection
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="24"
      style={
        Object {
          "display": "block",
        }
      }
      value={374}
    >
      Manuscript
    </WithStyles(MenuItem)>
  </WithStyles(WithFormControlContext(Select))>
</WithStyles(FormControl)>
`;

exports[`DocumentTypeMultipleField component should render disabled view 1`] = `
<WithStyles(FormControl)
  fullWidth={true}
>
  <WithStyles(WithFormControlContext(InputLabel))>
    Work type
  </WithStyles(WithFormControlContext(InputLabel))>
  <WithStyles(WithFormControlContext(Select))
    aria-label="Select multiple publications types to search on"
    disabled={true}
    fullWidth={true}
    multiple={true}
    onChange={[Function]}
    value={Array []}
  >
    <WithStyles(MenuItem)
      disabled={true}
      key="0"
    >
      Select document types
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="1"
      style={
        Object {
          "display": "block",
        }
      }
      value={130}
    >
      Conference Paper
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="2"
      style={
        Object {
          "display": "block",
        }
      }
      value={174}
    >
      Book
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="3"
      style={
        Object {
          "display": "block",
        }
      }
      value={177}
    >
      Book Chapter
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="4"
      style={
        Object {
          "display": "block",
        }
      }
      value={179}
    >
      Journal Article
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="5"
      style={
        Object {
          "display": "block",
        }
      }
      value={181}
    >
      Department Technical Report
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="6"
      style={
        Object {
          "display": "block",
        }
      }
      value={183}
    >
      Working Paper
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="7"
      style={
        Object {
          "display": "block",
        }
      }
      value={185}
    >
      Patent
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="8"
      style={
        Object {
          "display": "block",
        }
      }
      value={187}
    >
      Thesis
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="9"
      style={
        Object {
          "display": "block",
        }
      }
      value={189}
    >
      Seminar Paper
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="10"
      style={
        Object {
          "display": "block",
        }
      }
      value={191}
    >
      Newspaper Article
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="11"
      style={
        Object {
          "display": "block",
        }
      }
      value={197}
    >
      Conference Proceedings
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="12"
      style={
        Object {
          "display": "block",
        }
      }
      value={202}
    >
      Generic Document
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="13"
      style={
        Object {
          "display": "block",
        }
      }
      value={204}
    >
      Preprint
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="14"
      style={
        Object {
          "display": "block",
        }
      }
      value={228}
    >
      Digilib Image
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="15"
      style={
        Object {
          "display": "block",
        }
      }
      value={238}
    >
      Image
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="16"
      style={
        Object {
          "display": "block",
        }
      }
      value={263}
    >
      Audio Document
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="17"
      style={
        Object {
          "display": "block",
        }
      }
      value={272}
    >
      Reference Entry
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="18"
      style={
        Object {
          "display": "block",
        }
      }
      value={275}
    >
      Research Report
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="19"
      style={
        Object {
          "display": "block",
        }
      }
      value={294}
    >
      Journal
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="20"
      style={
        Object {
          "display": "block",
        }
      }
      value={310}
    >
      Video Document
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="21"
      style={
        Object {
          "display": "block",
        }
      }
      value={313}
    >
      Creative Work
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="22"
      style={
        Object {
          "display": "block",
        }
      }
      value={316}
    >
      Design
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="23"
      style={
        Object {
          "display": "block",
        }
      }
      value={371}
    >
      Data Collection
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="24"
      style={
        Object {
          "display": "block",
        }
      }
      value={374}
    >
      Manuscript
    </WithStyles(MenuItem)>
  </WithStyles(WithFormControlContext(Select))>
</WithStyles(FormControl)>
`;

exports[`DocumentTypeMultipleField component should render with given document types selected by default 1`] = `
<WithStyles(FormControl)
  fullWidth={true}
>
  <WithStyles(WithFormControlContext(InputLabel))>
    Work type
  </WithStyles(WithFormControlContext(InputLabel))>
  <WithStyles(WithFormControlContext(Select))
    aria-label="Select multiple publications types to search on"
    disabled={false}
    fullWidth={true}
    multiple={true}
    onChange={[Function]}
    value={
      Array [
        371,
        316,
      ]
    }
  >
    <WithStyles(MenuItem)
      disabled={true}
      key="0"
    >
      Select document types
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="1"
      style={
        Object {
          "display": "block",
        }
      }
      value={130}
    >
      Conference Paper
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="2"
      style={
        Object {
          "display": "block",
        }
      }
      value={174}
    >
      Book
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="3"
      style={
        Object {
          "display": "block",
        }
      }
      value={177}
    >
      Book Chapter
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="4"
      style={
        Object {
          "display": "block",
        }
      }
      value={179}
    >
      Journal Article
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="5"
      style={
        Object {
          "display": "block",
        }
      }
      value={181}
    >
      Department Technical Report
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="6"
      style={
        Object {
          "display": "block",
        }
      }
      value={183}
    >
      Working Paper
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="7"
      style={
        Object {
          "display": "block",
        }
      }
      value={185}
    >
      Patent
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="8"
      style={
        Object {
          "display": "block",
        }
      }
      value={187}
    >
      Thesis
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="9"
      style={
        Object {
          "display": "block",
        }
      }
      value={189}
    >
      Seminar Paper
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="10"
      style={
        Object {
          "display": "block",
        }
      }
      value={191}
    >
      Newspaper Article
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="11"
      style={
        Object {
          "display": "block",
        }
      }
      value={197}
    >
      Conference Proceedings
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="12"
      style={
        Object {
          "display": "block",
        }
      }
      value={202}
    >
      Generic Document
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="13"
      style={
        Object {
          "display": "block",
        }
      }
      value={204}
    >
      Preprint
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="14"
      style={
        Object {
          "display": "block",
        }
      }
      value={228}
    >
      Digilib Image
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="15"
      style={
        Object {
          "display": "block",
        }
      }
      value={238}
    >
      Image
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="16"
      style={
        Object {
          "display": "block",
        }
      }
      value={263}
    >
      Audio Document
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="17"
      style={
        Object {
          "display": "block",
        }
      }
      value={272}
    >
      Reference Entry
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="18"
      style={
        Object {
          "display": "block",
        }
      }
      value={275}
    >
      Research Report
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="19"
      style={
        Object {
          "display": "block",
        }
      }
      value={294}
    >
      Journal
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="20"
      style={
        Object {
          "display": "block",
        }
      }
      value={310}
    >
      Video Document
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="21"
      style={
        Object {
          "display": "block",
        }
      }
      value={313}
    >
      Creative Work
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={true}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="22"
      style={
        Object {
          "display": "block",
        }
      }
      value={316}
    >
      Design
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={true}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="23"
      style={
        Object {
          "display": "block",
        }
      }
      value={371}
    >
      Data Collection
    </WithStyles(MenuItem)>
    <WithStyles(MenuItem)
      checked={false}
      classes={
        Object {
          "selected": undefined,
        }
      }
      key="24"
      style={
        Object {
          "display": "block",
        }
      }
      value={374}
    >
      Manuscript
    </WithStyles(MenuItem)>
  </WithStyles(WithFormControlContext(Select))>
</WithStyles(FormControl)>
`;
